--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -444,59 +444,44 @@ LABEL_NAME=Name
 LABEL_SALES_PRICE_EXCLUDING_TAX=Sales Price (Excluding Tax)
 LABEL_SALES_PRICE_INCLUDING_TAX=Sales Price (Including Tax)
 LABEL_TAX=Tax
+MenuItemForm.SAMPLE_TEXT=SAMPLE TEXT
+MenuItemForm.lblBarcode.text=Barcode
+MenuItemForm.lblButtonColor.text=Button color
+MenuItemForm.lblSortOrder.text=Sort order
+MenuItemForm.lblTextColor.text=Text color
+MenuItemForm.lblTranslatedName.text=Translated name
+
 MenuCategoryForm.1=Sort order
-MenuCategoryForm.16=SAMPLE TEXT
 MenuCategoryForm.2=Button color
-MenuCategoryForm.21=Select color
-MenuCategoryForm.22=Select color
-MenuCategoryForm.26=Name is required
 MenuCategoryForm.7=Translated name
+MenuCategoryForm.16=Text color
+MenuCategoryForm.21=Choose color
+MenuCategoryForm.22=Choose text color
+MenuCategoryForm.26=Name cannot be blank
+
+MenuGroupForm.6=Translated name
 MenuGroupForm.12=Sort order
 MenuGroupForm.15=Button color
 MenuGroupForm.19=Text color
 MenuGroupForm.21=SAMPLE TEXT
-MenuGroupForm.26=Select color
-MenuGroupForm.27=Select color
-MenuGroupForm.29=Name is required
-MenuGroupForm.30=Category is required
-MenuGroupForm.31=New menu group
+MenuGroupForm.26=Choose color
+MenuGroupForm.27=Choose color
+MenuGroupForm.29=Name cannot be blank
+MenuGroupForm.30=Please select a category
+MenuGroupForm.31=Add menu group
 MenuGroupForm.32=Edit menu group
-MenuGroupForm.6=Translated name
-MenuItemDAO.0=Error occured while finding food items
-MenuItemDAO.1=Error occured while finding food items
-MenuItemExplorer.0=< ALL >
-MenuItemExplorer.1=Search
-MenuItemExplorer.16=Name : 
-MenuItemExplorer.17=Group : 
-MenuItemExplorer.18=< ALL >
-MenuItemExplorer.19=Search
-MenuItemExplorer.2=Name : 
-MenuItemExplorer.21=Search
-MenuItemExplorer.21=Search
-MenuItemExplorer.3=Group : 
-MenuItemView.0=ITEM_VIEW
+
 MenuModifierForm.0=Translated name
-MenuModifierForm.1=Button color
 MenuModifierForm.15=Sort order
+MenuModifierForm.1=Button color
 MenuModifierForm.27=Text color
 MenuModifierForm.29=SAMPLE TEXT
-MenuModifierForm.39=Select color
-MenuModifierForm.40=Select color
-MenuModifierForm.44=Name is required
-MenuModifierForm.45=New menu modifier
-MenuModifierForm.46=Edit menu modifier
-MerchantGateway.0=Authorize.net
-MerchantGateway.1=Mercury Pay
-MessageDialog.0=Error
-MessageDialog.0=Error
-MessageDialog.1=Error
-MessageDialog.1=Error
-MessageDialog.2=Error
-MessageDialog.2=Error
-MessageDialog.3=An unexpected error has occured, you may need to restart the application
-MessageDialog.3=An unexpected error has occured, you may need to restart the application
-MessageDialog.4=Error
-MessageDialog.4=Error
+MenuModifierForm.39=Choose button color
+MenuModifierForm.40=Choose text color
+MenuModifierForm.44=Name cannot be blank
+MenuModifierForm.45=Add menu group
+MenuModifierForm.46=Edit menu group
+
 POSConstants.TAX_EXPLORER=Tax Explorer
 POSConstants.TICKET_DELIVERY_DATE=DELIVERY DATE
 POSConstants.TICKET_TYPE=TYPE
