--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -46,6 +46,9 @@ SalesStatistics.1=Guest
 SalesSummaryDAO.0=MISC
 SalesSummaryDAO.1=FOOD SALES
 SalesSummaryDAO.2=NON FOOD SALES
+ShiftUtil.0=DEFAULT SHIFT
+ShiftUtil.1=\ AM
+ShiftUtil.2=\ PM
 ShopTableForm.12=Capacity
 ShopTableForm.15=Status
 ShopTableForm.17=Free
@@ -114,6 +117,9 @@ CashierModeNextActionDialog.1=OPEN TICKET
 CashierModeNextActionDialog.2=LOG OUT
 CashierModeNextActionDialog.4=SELECT NEXT ACTION
 CashierSwitchBoardView.LABEL_ORDER=ORDER
+CategoryView.0=CATEGORY_VIEW
+CategoryView.3=Please add required modifiers
+CategoryView.4=Cleared category buttons
 
 BACK_OFFICE_BUTTON_TEXT=BACK OFFICE
 BackOfficeWindow.0=Help
@@ -121,13 +127,34 @@ BaseMenuModifierGroupDAO.0=name
 INVENTORY_MENU_TEXT=Inventory
 NEW_ORDER_BUTTON_TEXT=NEW
 EDIT_TICKET_BUTTON_TEXT=EDIT
+GiftCertDialog.0=Gift Cert
+GiftCertDialog.1=Enter Gift Certificate Detail
+GiftCertDialog.14=Please enter gift certificate number
+GiftCertDialog.15=Please enter valid face value
+GiftCertDialog.16=OK
+GiftCertDialog.18=CANCEL
+GiftCertDialog.5=Gift certificate number
+GiftCertDialog.8=Face value
 GROUP_SETTLE_BUTTON_TEXT=GROUP SETTLE
+GratuityInputDialog.0=Enter gratuity amount
+GratuityInputDialog.7=OK
+GratuityInputDialog.9=CANCEL
 GroupSettleTicketSelectionWindow.0=Select tickets to settle
 GroupSettleTicketSelectionWindow.1=CONFIRM
 GroupSettleTicketSelectionWindow.2=CANCEL
+GroupView.0=GROUP_VIEW
+GroupView.2=</center></body></html>
 MANAGER_BUTTON_TEXT=MANAGER
 ManagerDialog.1=NO SALE
 ManagerDialog.2=Manager Functions
+ManualCardEntryDialog.13=SWIPE CARD
+ManualCardEntryDialog.14=ENTER AUTHORIZATION CODE
+ManualCardEntryDialog.15=SUBMIT
+ManualCardEntryDialog.16=CANCEL
+ManualCardEntryDialog.17=Enter Card Manually
+ManualCardEntryDialog.3=Card Number
+ManualCardEntryDialog.6=Expiery Month
+ManualCardEntryDialog.9=Expiery Year
 AboutAction.0=About
 AboutDialog.0=About
 AboutDialog.5=OK
@@ -234,10 +261,21 @@ PasswordEntryDialog.11=CLEAR
 PasswordEntryDialog.12=CLEAR ALL
 PasswordEntryDialog.25=CLEAR
 PasswordEntryDialog.30=Wrong password, please try again.
+PaymentProcessWaitDialog.0=Processing...
+PaymentProcessWaitDialog.1=Processing payment, please wait...
+PaymentProcessWaitDialog.2=Processing...
+PaymentProcessWaitDialog.3=Processing payment, please wait...
 PaymentTypeSelectionDialog.0=Select payment type
 PaymentTypeSelectionDialog.4=CREDIT CARD
 PaymentTypeSelectionDialog.6=DEBIT CARD
 PaymentTypeSelectionDialog.8=CANCEL
+PaymentView.0=Loyalty Id removed
+PaymentView.38=CLEAR
+PaymentView.52=DUE AMOUNT:
+PaymentView.54=TENDERED AMOUNT:
+PaymentView.64=Enter loyalty id:
+PaymentView.65=Loyalty id set.
+PaymentView.66=CLEAR
 PayoutDialog.2=TOTAL
 PayOutView.0=Enter pay out recepient
 PayOutView.10=Enter pay out reason
@@ -284,12 +322,34 @@ Application.44=Confirm
 AttendenceHistoryDAO.2=Error while calculating number of clocked in user
 AttendenceHistoryDAO.5=Error while calculating number of clocked in user
 AttendenceHistoryDAO.6=Unnable to payroll
+AuthorizationCodeDialog.3=Authorization Code
+AuthorizationCodeDialog.7=SUBMIT
+AuthorizationCodeDialog.8=CANCEL
+AuthorizationCodeDialog.9=Enter Authorization Code
+AuthorizeDotNetProcessor.0=Card declined\n
+AuthorizeDotNetProcessor.1=Error\n
+AuthorizeDotNetProcessor.10=Transaction declined\n
+AuthorizeDotNetProcessor.11=Error\n
+AuthorizeDotNetProcessor.12=Transaction declined\n
+AuthorizeDotNetProcessor.13=Error\n
+AuthorizeDotNetProcessor.2=Card declined\n
+AuthorizeDotNetProcessor.3=Error\n
+AuthorizeDotNetProcessor.4=Card declined\n
+AuthorizeDotNetProcessor.5=Error\n
+AuthorizeDotNetProcessor.6=Transaction declined\n
+AuthorizeDotNetProcessor.7=Error\n
+AuthorizeDotNetProcessor.8=Card declined\n
+AuthorizeDotNetProcessor.9=Error\n
 BUTTON_COLOR=Button Color
 CONFIGURATION_WINDOW_TITLE=Configuration
 CONFIG_TAB_DRAWERPULL=Drawer Pull
 CONFIG_TAB_PRINT=Print
 CONFIG_TAB_RESTAURANT=Restaurant
 CONFIG_TAB_TAX=Tax
+ConfirmPayDialog.0=CONFIRM
+ConfirmPayDialog.1=CANCEL
+ConfirmPayDialog.2=Confirm payment
+ConfirmPayDialog.4=Dialog
 CookingInstructionSelectionView.0=No cooking instruction selected
 CookingInstructionSelectionView.1=Select cooking instructions
 CookingInstructionSelectionView.2=COOKING INSTRUCTIONS
@@ -359,19 +419,31 @@ DatabaseConfigurationDialog.9=Enter Administrator password.
 DatabaseConfigurationView.3=Do you want to generate sample data?
 DatabaseConfigurationView.4=Confirm
 DatabaseConfigurationView.5=Database
+
 DataExportAction.0=Export Menu Items
 DataExportAction.1=Overwrite file 
 DataExportAction.3=Confirm
 DataExportAction.4=Saved\!
 DataImportAction.0=Import Menu Items
 DataImportAction.1=Success\!
+DataMigrationWindow.0=Migrate data
+DataMigrationWindow.1=Source
+DataMigrationWindow.2=Destination
+DataMigrationWindow.3=Migrate
 DateEntryView.3=Day
 DateEntryView.6=Month
 DateEntryView.9=Year
+DbPanel.0=Database
+DbPanel.12=Database name
+DbPanel.16=User
+DbPanel.20=Password
+DbPanel.4=Server address
+DbPanel.8=Port
 DefaultOrderServiceExtension.0=Order Handler
 DefaultOrderServiceExtension.1=Default order handler
 DefaultOrderServiceExtension.2=Ticket is not fully paid
 DefaultOrderServiceExtension.3=Ticket\# 
+DefaultOrderServiceExtension.4=\ will be closed.
 DefaultOrderServiceExtension.5=Confirm
 DiscountListDialog.18=Name
 DiscountListDialog.19=Rule
@@ -436,6 +508,8 @@ DrawerPullReportDialog.55==== VOIDS/REFUNDS (Without Tax) ===
 DrawerPullReportDialog.7=TOTAL REVENUES
 DrawerPullReportDialog.8=PRINT
 DrawerPullReportDialog.99=CODE
+DrawerUtil.0=Start kicking drawer\n
+DrawerUtil.1=End kicking drawer\n
 LABEL_BUY_PRICE=Buy Price
 LABEL_DISCOUNT_RATE=Discount Rate
 LABEL_GROUP=Group
@@ -444,6 +518,27 @@ LABEL_NAME=Name
 LABEL_SALES_PRICE_EXCLUDING_TAX=Sales Price (Excluding Tax)
 LABEL_SALES_PRICE_INCLUDING_TAX=Sales Price (Including Tax)
 LABEL_TAX=Tax
+MenuItemForm.0=The image is too large. Please select an image within 20 KB in size
+MenuItemForm.1=LABEL_NAME
+MenuItemForm.10=AddModifierGroup
+MenuItemForm.11=DeleteModifierGroup
+MenuItemForm.12=EditModifierGroup
+MenuItemForm.2=LABEL_GROUP
+MenuItemForm.22=LABEL_BUY_PRICE
+MenuItemForm.27=Printer Group
+MenuItemForm.28=Image:
+MenuItemForm.34=Clear
+MenuItemForm.4=LABEL_SALES_PRICE_INCLUDING_TAX
+MenuItemForm.40=Show image only
+MenuItemForm.41=Show Text with Image
+MenuItemForm.42=Select color
+MenuItemForm.43=Select color
+MenuItemForm.48=This modifier group already exists
+MenuItemForm.49=AddModifierGroup
+MenuItemForm.5=LABEL_SALES_PRICE_EXCLUDING_TAX
+MenuItemForm.50=EditModifierGroup
+MenuItemForm.51=DeleteModifierGroup
+MenuItemForm.6=LABEL_TAX
 MenuItemForm.SAMPLE_TEXT=SAMPLE TEXT
 MenuItemForm.lblBarcode.text=Barcode
 MenuItemForm.lblButtonColor.text=Button color
@@ -481,6 +576,10 @@ MenuModifierForm.40=Choose text color
 MenuModifierForm.44=Name cannot be blank
 MenuModifierForm.45=Add menu group
 MenuModifierForm.46=Edit menu group
+MercuryPayProcessor.13=Error authorizing transaction.
+MercuryPayProcessor.22=CreditTransaction
+MercuryPayProcessor.23=Error authorizing transaction.
+MercuryPayProcessor.26=Manual entry is not supported by selected payment gateway.
 
 POSConstants.TAX_EXPLORER=Tax Explorer
 POSConstants.TICKET_DELIVERY_DATE=DELIVERY DATE
@@ -489,6 +588,8 @@ PosAction.0=Please enter privileged password
 PosAction.1=No user found with that secret key
 PosAction.2=No permission
 PosComboRenderer.0=ALL
+PosGuiUtil.0=Proceed without table?
+PosGuiUtil.1=Confirm
 PosMessage.0=Edit tax rate
 PosMessage.1=ENTER PAYOUT NOTE
 PosMessage.10=Discount
@@ -946,8 +1047,23 @@ SelectionView.0=BACK
 SelectionView.1=NEXT
 SelectionView.2=PREV
 ServerProductivityReportView.0========== SERVER PRODUCTIVITY REPORT ==========
-ServerProductivityReportView.12=server_productivity_report
 SettleTicketAction.0=Ticket is already settled
+SettleTicketDialog.12=My Kala discount server connection error
+SettleTicketDialog.16=Invalid card string
+SettleTicketDialog.17=Invalid authorization code
+SettleTicketDialog.18=Loyalty discount already added.
+SettleTicketDialog.19=Enter loyalty id:
+SettleTicketDialog.21=Congrations\! you have discounts from Kala Loyalty Check discounts list for more.
+SettleTicketDialog.22=Error setting My Kala discount.
+
+SettleTicketDialog.6=Settle ticket
+SettleTicketDialog.7=You do not have permission to execute this action
+SplitTicketDialog.0=ORIGINAL TICKET ID: TICKET_ID
+SwipeCardDialog.0=Swipe card here
+SwipeCardDialog.1=MANUAL ENTRY
+SwipeCardDialog.2=ENTER AUTHORIZATION CODE
+SwipeCardDialog.3=SUBMIT
+SwipeCardDialog.4=CANCEL
 Switchboard.0=Welcome
 Switchboard.1=TICKETS AND ACTIVITY
 Switchboard.10=Please select one ticket to edit.
@@ -1074,6 +1190,18 @@ TicketListView.6=Guest
 TicketListView.8=PAID
 TicketListView.9=OPEN
 TicketReceiptView.0=Report viewing component could not be found.
+TicketView.20=Please select and item
+TicketView.21=Cooking instruction cannot be added to item already printed to kitchen
+TicketView.22=It seems the ticket has been modified by some other person or terminal. Save failed.
+TicketView.35=INCLUDED
+TicketView.36=Ticket [ NEW ]
+TicketView.37=Ticket \#
+TicketView.39=Enter amount
+TicketView.40=Enter discount amount
+TicketView.43=DISCOUNT
+TicketView.44=Enter or scan item id
+TicketView.45=Item not found
+TicketView.9=Discount:
 TicketViewerTableModel.0=Item
 TicketViewerTableModel.1=U/Price
 TicketViewerTableModel.2=Unit
@@ -1094,6 +1222,7 @@ TipsCashoutReportDialog.32=Could not print\n
 TipsCashoutReportDialog.4=Transaction Count
 TipsCashoutReportDialog.5=Cash Tips
 TipsCashoutReportDialog.6=Charged Tips
+TipsCashoutReportDialog.7=Tips Due
 TodoTicketViewerTableModel.0=Item
 TodoTicketViewerTableModel.1=U/Price
 TodoTicketViewerTableModel.2=Unit
@@ -1137,9 +1266,11 @@ UserDAO.7=Another user with same ID already exists
 UserDAO.8=Could not save user
 UserDAO.9=select count(*) from Ticket ticket where ticket.owner=:owner and ticket.
 UserForm.0=Driver
+UserForm.1=already exists.
 UserForm.14=First Name
 UserForm.16=Last Name
 UserForm.18=Secret Key
+UserForm.2=is not valid.
 UserForm.20=Confirm Secret Key
 UserForm.28=Cost Per Hour
 UserForm.31=User Type
