--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -502,6 +502,10 @@ LABEL_NAME=Name
 LABEL_SALES_PRICE_EXCLUDING_TAX=Sales Price (Excluding Tax)
 LABEL_SALES_PRICE_INCLUDING_TAX=Sales Price (Including Tax)
 LABEL_TAX=Tax
+MenuItemExplorer.0=Name:
+MenuItemExplorer.1=Group
+MenuItemExplorer.2=Full List
+MenuItemExplorer.3=Search
 MenuItemForm.0=The image is too large. Please select an image within 20 KB in size
 MenuItemForm.1=LABEL_NAME
 MenuItemForm.10=AddModifierGroup
