--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1028,6 +1028,7 @@ RestaurantConfigurationView.48=Default gratuity
 RestaurantConfigurationView.54=Ticket footer message
 RestaurantConfigurationView.7=Address line 1
 SORT_ORDER=Sort Order
+IMAGE_ICON=Image
 SelectionView.0=BACK
 SelectionView.1=NEXT
 SelectionView.2=PREV
