--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -561,6 +561,7 @@ MercuryPayProcessor.22=CreditTransaction
 MercuryPayProcessor.23=Error authorizing transaction.
 MercuryPayProcessor.26=Manual entry is not supported by selected payment gateway.
 
+BOOKING_BUTTON_TEXT=BOOKING
 POSConstants.TAX_EXPLORER=Tax Explorer
 POSConstants.TICKET_DELIVERY_DATE=DELIVERY DATE
 POSConstants.TICKET_TYPE=TYPE
@@ -1291,6 +1292,7 @@ UserPermission.18=View Explorers
 UserPermission.19=View Reports
 UserPermission.2=Edit Ticket
 UserPermission.20=Manage Table Layout
+UserPermission.22=Booking
 UserPermission.3=Void Ticket
 UserPermission.4=Perform Administrative Task
 UserPermission.5=Perform Manager Task
