--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1009,6 +1009,7 @@ PosMessage.277=OPEN TICKETS
 PosMessage.278=Modifier Group
 PosMessage.279=Floreant POS
 DRAWER_PULL_BUTTON_TEXT=DRAWER STATUS
+DUPLICATE=Duplicate
 PosMessage.280=Price is not valid.
 PosMessage.281=Enter
 PosMessage.282=Address Line3\:
