--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1245,7 +1245,7 @@ RECEIPT_REPORT_TENDERED_AMOUNT_LABEL=Tendered
 RECEIPT_REPORT_SUBTOTAL_HEADER=SUB
 RECEIPT_REPORT_DATE_LABEL=Printed\: 
 RECEIPT_REPORT_DISCOUNT_LABEL=Discount
-RECEIPT_REPORT_DUEAMOUNT_LABEL=Due Amount
+RECEIPT_REPORT_DUEAMOUNT_LABEL=Due
 RECEIPT_REPORT_GUEST_NO_LABEL=Guests\: 
 RECEIPT_REPORT_ITEM_LABEL=ITEM
 RECEIPT_REPORT_PAIDAMOUNT_LABEL=Paid
